Updates in code and Readme
Now link is editable from config file.
Readme is added.

--- a/config.cfg
+++ b/config.cfg
@@ -5,3 +5,5 @@ LOG_IN_PASSWORD = *****************
 TARGET_USER = *****************
 [Settings]
 DEBUGGING = True
+[Link]
+LINK = *****#all_messages
